--- a/content/themes/kenbury/src/css/breakpoints/_sm-768.scss
+++ b/content/themes/kenbury/src/css/breakpoints/_sm-768.scss
@@ -43,7 +43,7 @@ header {
               padding-left: 0;
               h2 {
                 font-size: 30px;
-                line-height: 38px;
+                line-height: 36px;
               }
             }
           }
@@ -148,5 +148,17 @@ body.blog {
 body.blog footer#colophon .ctn-lnks-footer, 
 body.single footer#colophon .ctn-lnks-footer {
   padding-top: 100px;
+}
+
+footer#colophon .ctn-lnks-footer {
+  .col-md-3 {
+    margin-bottom: 15px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  ul.menu li {
+    margin-top: 10px;
+  }
 }
 
